# marlowe-playground

./: .envrc  .gitignore  .stylish-haskell.yaml  CONTRIBUTING.adoc  README.adoc  cabal.project  ci.nix  default.nix  flake.nix  flake_old.nix  package-lock.json  packages.dhall  shell.nix
.github/workflows/: autocommit.yml  deploy.yml  e2e-tests.yml  test.yml
bitte/: default.nix
changelog.d/: 20230518_113359_tomasz.rybarczyk_PLT_5990.md  20230518_113359_tomasz.rybarczyk_PLT_5990.rst  20230519_112726_adames.larry_e2e_tests.rst  20230519_144338_tomasz.rybarczyk_PLT_5784.md  20230519_144338_tomasz.rybarczyk_PLT_5784.rst  20230519_151533_jhbertra_fix_gist_api.md  20230526_083949_tomasz.rybarczyk_PLT_5465.md  20230529_110109_tomasz.rybarczyk_PLT_5468.md  20230529_150400_tomasz.rybarczyk_PLT_6088_fix_simulator_form_initialization.md  20230922_035409_pablo.lamela_PLT_7427.md  20231020_213005_hrajchert_plt_3331_change_ada_block.md  20231024_024818_pablo.lamela_PLT_8206.md  20231026_200217_pablo.lamela_PLT_8277.md  20231027_140636_hrajchert_fix_addr_show.md  20231028_163530_tomasz.rybarczyk_switch_to_blockly_param.md  20231116_023007_pablo.lamela_PLT_3985.md  20231120_125001_pablo.lamela_PLT_7568.md  20231129_061349_pablo.lamela_PLT_7305.md  20240117_023242_pablo.lamela_PLT_8827.md  20240127_213938_pablo.lamela_PLT_8828.md
deploy/: marlowe-playground-production.yaml  marlowe-playground-staging.yaml  marlowe-playground-test.yaml  marlowe-playground.yaml  oci-images.nix  operables.nix  values.yaml
deploy/templates/: marlowe-playground.yaml
doc/: conf.py
doc/marlowe/tutorials/: introducing-marlowe.rst  javascript-embedding.rst  marlowe-run.rst  using-marlowe.rst
e2e/: package-lock.json  package.json  run_tests.sh  shell.nix  tsconfig.json
e2e/config/: hosts.json  pages.json
e2e/env/: common.env
e2e/src/: cardano.js  index.js  index.ts  promise.js
e2e/src/env/: global.ts  parseEnv.js  parseEnv.ts
e2e/src/features/: analyze-contract.feature  compile-invalid-contract.feature  compile-new-project.feature  compile-valid-contract.feature  contract-simulation.feature  home-page.feature  reset-simulation.feature  switching-editors.feature
e2e/src/reporter/: cucumber-report.js  cucumber-report.ts
e2e/src/step-definitions/: app.js  click.js  click.ts  contracts.js  form.js  form.ts  generate-contract.js  hooks.js  navigation.js  navigation.ts  popup.js  state-observation.js  wallets.js  world.js
e2e/src/support/: globalStateManager.js  html-behavior.js  html-behavior.ts  navigation-behavior.js  (+5 more)
helm/: Chart.yaml  values.yaml
helm/templates/: marlowe-playground.yaml
marlowe-playground-client/: README.md  default.nix  entry.js  grammar.ne  package-lock.json  package.json  spago-packages.nix  spago.dhall  tsconfig.json  webpack.config.js
marlowe-playground-client/src/: ExportToRunner.purs  Help.purs  Home.purs  Main.purs  Pretty.purs  Router.purs  Types.purs
marlowe-playground-client/test/: BridgeTests.purs  Main.js  Main.purs  entry.js  state.json
marlowe-playground-server/: README.md  marlowe-playground-server.cabal
marlowe-playground-server/app/: FlowChartGenerator.hs  Main.hs  PSGenerator.hs  Webserver.hs
marlowe-playground-server/contracts/: ContractForDifferences.hs  ContractForDifferencesWithOracle.hs  CouponBondGuaranteed.hs  Escrow.hs  EscrowWithCollateral.hs  Example.hs  Swap.hs  ZeroCouponBond.hs
marlowe-playground-server/src/: API.hs  Auth.hs  Gist.hs  Server.hs
marlowe-playground-server/src/Language/Haskell/: Interpreter.hs
marlowe-playground-server/src/Marlowe/: Mermaid.hs
marlowe-playground-server/src/Webghc/: Interpreter.hs  Server.hs
marlowe-symbolic/: marlowe-symbolic.cabal
nix/: CHECKLIST.md  cabal-project.nix  ci.nix  easy-purescript-nix.nix  formatters.nix  formatting.nix  generated-purescript.nix  haskell.nix  marlowe-playground-client.nix  nixos.nix  npm-deps-hash.nix  oci-images.nix  operables.nix  outputs.nix  per-system-outputs.nix  playwright.nix  production-client.nix  project.nix  scripts.nix  shell.nix  spago-packages.nix
nix/marlowe-playground/: easy-purescript-nix.nix  generated-purescript.nix  marlowe-playground-client.nix  oci-images.nix  operables.nix  playwright.nix  purescript.nix  scripts.nix
nix/pkgs/: default.nix  update-client-deps.nix
nix/tests/: default.nix  generated.nix  png-optimization.nix  purs-tidy.nix  stylish-haskell.nix  vm.nix
old_nix/: shell.nix
scripts/: deploy-bitte
web-common-marlowe/src/: Humanize.purs
web-common-marlowe/test/: Humanize.purs
web-common/src/: LocalStorage.purs  Monaco.purs  Prologue.purs  SessionStorage.purs
(+173 files in other folders)
