cabal-version: >=1.10
name: marlowe-playground-server
version: 0.1.0.0
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
author: Pablo Lamela
category: Web
build-type: Simple
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/input-output-hk/marlowe-playground

library
    exposed-modules:
        -- src
        Auth
        API
        Marlowe.Config
        Marlowe.Contracts
        Marlowe.Mermaid
        Server
        -- contracts
        ContractForDifferences
        ContractForDifferencesWithOracle
        CouponBondGuaranteed
        Escrow
        EscrowWithCollateral
        Example
        Swap
        ZeroCouponBond
        Option
        -- WebGHC
        Webghc.Server
        Language.Haskell.Interpreter
    -- Include 'contracts' so haskell.nix knows to include the files that we embed with TH
    other-modules:
        Auth.Types
        Control.Monad.Now
        Control.Monad.Trace
        Control.Monad.Web
        Gist
        Webghc.Client
        Webghc.Interpreter
        Servant.Extra
        System.IO.Extras
    hs-source-dirs:
        src
        contracts
    default-language: Haskell2010
    build-depends:
        aeson -any,
        aeson-casing -any,
        base >=4.7 && <5,
        bytestring -any,
        cookie -any,
        containers -any,
        exceptions -any,
        file-embed -any,
        filepath -any,
        hashable -any,
        http-client -any,
        http-client-tls -any,
        http-conduit -any,
        http-types -any,
        jwt -any,
        lens -any,
        marlowe -any,
        monad-logger -any,
        mtl -any,
        newtype-generics -any,
        plutus-ledger-api -any,
        process -any,
        servant >= 0.16,
        servant-server -any,
        transformers -any,
        text -any,
        temporary -any,
        servant-client -any,
        servant-purescript -any,
        time -any,
        time-out -any,
        time-units -any,
        unordered-containers -any,
        wai-cors -any
        -- directory -any,
        -- marlowe-symbolic -any,
        -- marlowe-actus -any,
        -- servant-client-core -any,
        -- stm -any,
        -- uuid -any,
        -- validation -any

executable marlowe-playground-server
    main-is: Main.hs
    other-modules:
        Webserver
        PSGenerator
        Types
        Escrow
        EscrowWithCollateral
        Example
        CouponBondGuaranteed
        ZeroCouponBond
        Swap
        Option
        ContractForDifferences
        ContractForDifferencesWithOracle
    hs-source-dirs: app contracts
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
    build-depends:
        aeson -any,
        base -any,
        bytestring -any,
        containers -any,
        directory -any,
        filepath -any,
        lens -any,
        marlowe -any,
        marlowe-playground-server -any,
        marlowe-symbolic -any,
        monad-logger -any,
        mtl -any,
        plutus-ledger-api,
        purescript-bridge -any,
        optparse-applicative -any,
        servant-server -any,
        servant-purescript -any,
        text -any,
        warp -any,
        time-units -any
        -- marlowe-actus -any,
        -- plutus-tx,
        -- servant-foreign -any,
        -- servant-client -any,
        -- http-client -any,
        -- http-types -any,
        -- wai -any,
        -- time -any,

executable flow-chart-generator
    main-is: FlowChartGenerator.hs
    other-modules:
        Types
        Escrow
        EscrowWithCollateral
        Example
        CouponBondGuaranteed
        ZeroCouponBond
        Swap
        Option
        ContractForDifferences
        ContractForDifferencesWithOracle
    hs-source-dirs: app contracts
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
    build-depends:
        aeson -any,
        base -any,
        marlowe -any,
        marlowe-playground-server -any,
        plutus-ledger-api -any

test-suite marlowe-playground-server-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base -any
